// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chicken component: Should render correctly when chicken ID passed in 1`] = `
<ChickenRenderer
  chicken={
    Object {
      "name": "The First Chicken",
    }
  }
  navigation={
    Object {
      "getParam": [MockFunction] {
        "calls": Array [
          Array [
            "chickenId",
            "NO-ID",
          ],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": "chicken1",
          },
        ],
      },
    }
  }
  nextChickenId="chicken2"
  prevChickenId={null}
/>
`;

exports[`Chicken component: Should render correctly when chicken not found 1`] = `
<Component>
  Chicken with ID chicken3 not found
</Component>
`;

exports[`Chicken component: Should render correctly when no chicken ID passed in 1`] = `
<Component>
  No Chicken ID passed in!
</Component>
`;
